[tool.poetry]
name = "misc-crypto"
version = "0.1.0"
description = "Mischievous cryptography implementations"
authors = ["Chih-Cheng Liang <cc@ethereum.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ChihChengLiang/misc_crypto"
repository = "https://github.com/ChihChengLiang/misc_crypto"

[tool.poetry.dependencies]
python = "^3.8"
eth-utils = ">=1.8.4,<2"
py-ecc = ">=4.0.0<5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
